test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-oknil-borrowed.chpl
//  lhs: owned?  rhs: borrowed?  error: mm

class MyClass {  var x: int;  }

var rhs: borrowed MyClass?;

record MyRecord {
  var lhs: owned MyClass? = rhs;
}

var myr = new MyRecord();

compilerError("done");
