test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-oknil-borrowed.good
init-field-dflt-oknil-owned-from-oknil-borrowed.chpl:11: error: Cannot initialize 'owned MyClass?' from a 'borrowed MyClass?'
